2003-04-23  Jody Goldberg <jody@gnome.org>

	* src/workbook-edit.c (wbcg_edit_ctor) : set the wbcg early.

2003-04-22  Jody Goldberg <jody@gnome.org>

	* src/gnm-marshalers.list : add NONE:BOOLEAN

	* src/sheet-control-gui.c (scg_select_all) : pretend that we
	  drag selected the range to fire an update signal even if the
	  exprentry's update_policy is discontinuous.
	(scg_rangesel_extend) : keyboard changes cause an update too.
	(scg_rangesel_move) : ditto.
	* src/item-bar.c (item_bar_event) : ditto.

2003-04-22  Morten Welinder  <terra@gnome.org>

	* src/gui-clipboard.c (x_request_clipboard): Follow cut-and-paste
	preference.

	* src/gnumeric-gconf.c (gnm_conf_init): Set initial cut-and-paste
	preference.
	(gnm_gconf_set_prefer_clipboard_selection): New function.

	* src/formats.c (currency_date_format_init): Improve error
	messages.

2003-04-22  Jody Goldberg <jody@gnome.org>

	* doc/xmldocs.make : install docs where libgnome expects them
	  now something actually happens, although it is dog slow.

2003-04-21  Jody Goldberg <jody@gnome.org>

	* src/mstyle.c (mstyle_hash) : adjust to allow styles from different
	  sheets to hash the same despite auto colours that have different
	  instances.
	(mstyle_element_equal) : ditto.

	* src/sheet.c (sheet_destroy) : free the names last to make debugging
	  easier.

2003-04-19  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/commands.c: Implemented Undo/Redo for data shuffling.

	* src/commands.c: Implemented Undo/Redo for scenario->manager.

2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/sheet.c (sheet_move_range): Added a call to update scenarios.

	* src/commands.c: Implemented Undo/Redo for scenario->add.

2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c (xml_read_scenarios): Use global_range_parse
	instead of parse_range.

2003-04-15  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* src/xml-io.c (xml_read_scenarios): Wrote. Reads scenarios of a
	sheet.